Fix Select column being cutoff

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -232,7 +232,7 @@ a {
 
 .recurring-add-grid-full {
     display: grid;
-    grid-template-columns: 55px 1.2fr 140px 90px 110px 110px 130px 110px 80px;
+    grid-template-columns: 60px 1.2fr 140px 90px 110px 110px 130px 110px 80px;
     margin-bottom: 10px;
     padding-left: 10px;
     column-gap: 10px;
